# cnode

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  Dockerfile  Dockerfile.perf  README.md  vcpkg.json
.github/workflows/: ci.yml  cleanup.yml
config/: config.json.example  outbound.json.example  route.json.example
include/acppnode/: common.hpp
include/acppnode/app/: bootstrap.hpp  bootstrap_cli.hpp  bootstrap_inbounds.hpp  bootstrap_monitor.hpp  bootstrap_panels.hpp  bootstrap_runtime.hpp  bootstrap_setup.hpp  bootstrap_shutdown.hpp  connection_guard.hpp  mux_relay.hpp  panel_sync.hpp  port_binding.hpp  rate_limiter.hpp  relay.hpp  session_context.hpp  session_handler.hpp  sharded_user_stats.hpp  shared_user_store.hpp  stats.hpp  token_bucket.hpp  udp_framer.hpp  udp_session.hpp  udp_types.hpp  worker.hpp
include/acppnode/common/: allocator.hpp  base64.hpp  buffer_util.hpp  byte_reader.hpp  circular_buffer.hpp  clock.hpp  conn_state.hpp  container_util.hpp  defaults.hpp  error.hpp  ip_utils.hpp  network.hpp  protocol_data.hpp  sharded_user_stats.hpp  spinlock.hpp  target_address.hpp  unique_function.hpp  unsafe.hpp
include/acppnode/core/: constants.hpp  naming.hpp
include/acppnode/dns/: dns_service.hpp
include/acppnode/geo/: geodata.hpp  protobuf_lite.hpp
include/acppnode/handlers/: inbound_handler.hpp  outbound_handler.hpp  udp_inbound_handler.hpp
include/acppnode/infra/: config.hpp  json_helpers.hpp  log.hpp
include/acppnode/panel/: v2board_panel.hpp
include/acppnode/protocol/: inbound_registry.hpp  outbound.hpp  outbound_helpers.hpp  protocol_registry.hpp  sniff_config.hpp
include/acppnode/protocol/blackhole/: blackhole_outbound.hpp
include/acppnode/protocol/freedom/: freedom_outbound.hpp
include/acppnode/protocol/inbound/: base_inbound.hpp
include/acppnode/protocol/mux/: mux_codec.hpp
include/acppnode/protocol/shadowsocks/: shadowsocks_protocol.hpp  ss_udp.hpp  ss_udp_inbound.hpp
include/acppnode/protocol/shadowsocks/inbound/: ss_inbound.hpp
include/acppnode/protocol/shadowsocks/outbound/: ss_outbound.hpp
include/acppnode/protocol/trojan/: trojan_codec.hpp  trojan_protocol.hpp  trojan_udp_framer.hpp  trojan_user_manager.hpp
include/acppnode/protocol/trojan/inbound/: trojan_inbound.hpp
include/acppnode/protocol/trojan/outbound/: trojan_outbound.hpp
include/acppnode/protocol/vmess/: vmess_cipher.hpp  vmess_crypto.hpp  vmess_parser.hpp  vmess_protocol.hpp  vmess_request.hpp  vmess_stream.hpp  vmess_user_manager.hpp
include/acppnode/protocol/vmess/inbound/: vmess_inbound.hpp
include/acppnode/protocol/vmess/outbound/: vmess_outbound.hpp
include/acppnode/router/: router.hpp
include/acppnode/sniff/: sniffer.hpp
include/acppnode/transport/: async_stream.hpp  delegating_stream.hpp  multi_buffer.hpp  proxy_protocol.hpp  stream_helpers.hpp  stream_settings.hpp  tcp_stream.hpp  timeout_scheduler.hpp  tls_stream.hpp  transport_dialer.hpp  transport_stack.hpp  ws_stream.hpp
scripts/: cnode.sh
src/: main.cpp  pch.hpp
src/app/: bootstrap.cpp  bootstrap_cli.cpp  bootstrap_inbounds.cpp  bootstrap_monitor.cpp  bootstrap_panels.cpp  bootstrap_runtime.cpp  bootstrap_setup.cpp  bootstrap_shutdown.cpp  mux_relay.cpp  panel_sync.cpp  panel_sync_node.cpp  relay_tcp.cpp  relay_udp.cpp  session_context.cpp  session_handler.cpp  stats.cpp  udp_session.cpp  worker.cpp
src/common/: error.cpp
src/dns/: dns_cache.cpp  dns_service.cpp
src/geo/: geodata.cpp
src/infra/: config.cpp  config_loader.cpp  config_validation.cpp  log.cpp
src/panel/: v2board_panel.cpp
src/protocol/: inbound_registry.cpp  protocol_registry.cpp
src/protocol/blackhole/: blackhole_outbound.cpp
src/protocol/freedom/: freedom_outbound.cpp
src/protocol/mux/: mux_codec.cpp
src/protocol/shadowsocks/: shadowsocks_protocol.cpp  ss_udp.cpp  ss_udp_inbound.cpp
src/protocol/shadowsocks/inbound/: ss_inbound.cpp
src/protocol/shadowsocks/outbound/: ss_outbound.cpp
src/protocol/trojan/: trojan_codec.cpp  trojan_protocol.cpp  trojan_user_manager.cpp
src/protocol/trojan/inbound/: trojan_inbound.cpp
src/protocol/trojan/outbound/: trojan_outbound.cpp
src/protocol/vmess/: vmess_protocol.cpp  vmess_stream.cpp
src/protocol/vmess/inbound/: vmess_inbound.cpp
src/protocol/vmess/outbound/: vmess_outbound.cpp
src/router/: router.cpp
src/sniff/: http_sniffer.cpp  sniffer.cpp  tls_sniffer.cpp
src/transport/: async_stream.cpp  proxy_protocol.cpp  tcp_stream.cpp  timeout_scheduler.cpp  tls_stream.cpp  transport_dialer.cpp  transport_stack.cpp  ws_stream.cpp
